renamed to Treville Pro

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wellington-pro",
+  "name": "treville-pro",
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
@@ -8,11 +8,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://ThemeZee@bitbucket.org/ThemeZee/wellington-pro.git"
+    "url": "git+https://ThemeZee@bitbucket.org/ThemeZee/treville-pro.git"
   },
   "author": "Thomas Weichselbaumer <contact@themezee.com> (https://themezee.com)",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/ThemeZee/wellington-pro#readme",
+  "homepage": "https://bitbucket.org/ThemeZee/treville-pro#readme",
   "devDependencies": {
     "autoprefixer": "^6.5.2",
     "gulp": "^3.9.1",
